upload image feature added

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <meta property="og:title" content="Real-Time Purity Scanner | AI-Powered Raman Spectroscopy" />
     <meta property="og:description" content="Portable AI-powered Raman spectroscopy system for real-time chemical purity testing with 95% accuracy and 3D visualization." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content= />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Real-Time Purity Scanner | AI-Powered Raman Spectroscopy" />
     <meta name="twitter:description" content="Non-destructive chemical purity analysis in under 3 seconds" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content= />
   </head>
 
   <body>
